# project-brain

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
config/: config.example.json  cursor_mcp.json  warp_aliases.sh
scripts/: brain.py  git_hook_post_commit.sh  index.sh  install.sh
src/: config.py  linear_integration.py  mcp_server.py  rag_pipeline.py
tests/: test_config.py  test_rag_pipeline.py
