[project]
name = "project-brain"
version = "1.0.0"
description = "RAG-powered codebase Q&A and Linear integration"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.0,<0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
